feat(app): create example for AnimatedVisibilityActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Jetpack Compose Animation Playground</string>
+    <string name="title_animated_visibility">Animated Visibility</string>
 </resources>
