--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="collapse">collapse</string>
     <string name="text_hide">Hide</string>
     <string name="text_show">Show</string>
+    <string name="title_cross_fade">Cross Fade</string>
 </resources>
