feat(app): create example of TweenActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,18 @@
 <resources>
     <string name="app_name">Jetpack Compose Animation Playground</string>
+
     <string name="title_animated_visibility">Animated Visibility</string>
     <string name="title_animated_content_size">Animated Content Size</string>
+    <string name="title_cross_fade">Cross Fade</string>
+    <string name="title_tween">Tween</string>
+
     <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
     </string>
     <string name="short_lorem_ipsum">Click Me!</string>
+
     <string name="text_expand">expand</string>
-    <string name="collapse">collapse</string>
+    <string name="text_collapse">collapse</string>
     <string name="text_hide">Hide</string>
     <string name="text_show">Show</string>
-    <string name="title_cross_fade">Cross Fade</string>
 </resources>
