--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_cross_fade">Cross Fade</string>
     <string name="title_tween">Tween</string>
     <string name="title_spring">Spring</string>
+    <string name="title_keyframe">Key Frames</string>
 
     <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
