--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_spring">Spring</string>
     <string name="title_keyframe">Key Frames</string>
     <string name="title_repeatable">Repeatable</string>
+    <string name="title_infinite_repeatable">Infinite Repeatable</string>
 
     <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua.
