--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,14 @@
     <string name="text_shrink_horizontal_animated_visibility">Shrink Horizontal</string>
     <string name="text_shrink_vertical_animated_visibility">Shrink Vertical</string>
     <string name="text_default_animated_visibility_2">default animated visibility</string>
+    <string name="text_red">Red</string>
+    <string name="text_blue">Blue</string>
+    <string name="text_gray">Gray</string>
+    <string name="text_black">Black</string>
+    <string name="text_yellow">Yellow</string>
+    <string name="text_light_gray">LightGray</string>
+    <string name="text_cyan">Cyan</string>
+    <string name="text_green">Green</string>
+    <string name="text_magenta">Magenta</string>
+    <string name="text_dark_gray">DarkGray</string>
 </resources>
