--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,10 @@
     <string name="text_expanded_fab_with_iteration_3_and_repeat_mode_restart">Expanded FAB with Iteration 3 and RepeatMode
         Restart
     </string>
+    <string name="text_expanded_fab_with_infinite_repeatable_and_repeat_mode_restart">Expanded FAB with infinite repeatable and RepeatMode
+        Restart
+    </string>
+    <string name="text_expanded_fab_with_infinite_repeatable_and_repeat_mode_reverse">Expanded FAB with infinite repeatable and RepeatMode
+        Reverse
+    </string>
 </resources>
