--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     </string>
     <string name="title_low_level_api">Low-Level APIs</string>
     <string name="title_animate_as_state">Animate*AsState</string>
+    <string name="title_update_transition">UpdateTransition</string>
     <string name="text_slide_animated_visibility">Slide</string>
     <string name="text_slide_horizontal_animated_visibility">Slide Horizontal</string>
     <string name="text_slide_vertical_animated_visibility">Slide Vertical</string>
@@ -88,4 +89,5 @@
     <string name="text_expanded_fab_animate_color_with_animate_color_as_state">Expanded FAB Animate Color with animateColorAsState</string>
     <string name="text_expanded_fab_animate_size_with_animate_int_size_as_state">Expanded FAB Animate Size with animateIntSizeAsState</string>
     <string name="text_expanded_fab_animate_position_with_animate_dp_as_state">Expanded FAB Animate Position with animateDpAsState</string>
+    <string name="text_expanded_fab_animate_color_size_position_with_updatetransition">Expanded FAB Animate Color, Size and Position with UpdateTransition</string>
 </resources>
