--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="title_low_level_api">Low-Level APIs</string>
     <string name="title_animate_as_state">Animate*AsState</string>
     <string name="title_update_transition">UpdateTransition</string>
+    <string name="title_remember_infinite_transition">RememberInfiniteTransition</string>
     <string name="text_slide_animated_visibility">Slide</string>
     <string name="text_slide_horizontal_animated_visibility">Slide Horizontal</string>
     <string name="text_slide_vertical_animated_visibility">Slide Vertical</string>
@@ -90,4 +91,5 @@
     <string name="text_expanded_fab_animate_size_with_animate_int_size_as_state">Expanded FAB Animate Size with animateIntSizeAsState</string>
     <string name="text_expanded_fab_animate_position_with_animate_dp_as_state">Expanded FAB Animate Position with animateDpAsState</string>
     <string name="text_expanded_fab_animate_color_size_position_with_updatetransition">Expanded FAB Animate Color, Size and Position with UpdateTransition</string>
+    <string name="text_expanded_fab_animate_color_size_position_with_rememberinfinitetransition">Expanded FAB Animate Color, Size and Position with RememberInfiniteTransition</string>
 </resources>
